ingress.yaml
kind: Pod
apiVersion: v1
metadata:
  name: api
  labels:
    app: api
spec:
  containers:
    - name: api
      image: 'alina8o/aspnet-demo:latest'
---
kind: Service
apiVersion: v1
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - port: 80
---
kind: Pod
apiVersion: v1
metadata:
  name: nextjs
  labels:
    app: nextjs
spec:
  containers:
    - name: nextjs
      image: 'alina8o/my-nextjs:latest'
---
kind: Service
apiVersion: v1
metadata:
  name: nextjs-service
spec:
  selector:
    app: nextjs
  ports:
    - port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs-asp-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: api-service
                port:
                  number: 80
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nextjs-service
                port:
                  number: 3000
---
